--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>
                 <div class="sentence1">
                     <div class="type1">
-                        nuture wellness
+                        nurture wellness
                     </div>
                 </div>
             </br>
